--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,16 +20,19 @@ dependencies:
     sdk: flutter
 
   dio: ^4.0.6
+  hive: ^2.2.3
   http: ^0.13.4  
   intl: ^0.17.0
   sizer: ^2.0.15
   provider: ^6.0.2
   geolocator: ^8.2.0
   flutter_svg: ^1.0.3
+  hive_flutter: ^1.1.0
   image_picker: ^0.8.5
   path_provider: ^2.0.9
+  hive_generator: ^2.0.0 
   adaptive_theme: ^2.3.1
-  cupertino_icons: ^1.0.2  
+  cupertino_icons: ^1.0.2 
   google_maps_flutter: ^2.1.3
   flutter_native_splash: ^2.1.5
   flutter_launcher_icons: ^0.9.2
@@ -42,6 +45,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   
+  build_runner: ^2.3.2
   flutter_lints: ^1.0.0
     
 flutter_icons:
